--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <div id="fh5co-about" data-section="acerca">
         <div class="fh5co-2col fh5co-bg to-animate-2" style="background-image: url(images/res_img_1.jpg)"></div>
         <div class="fh5co-2col fh5co-text">
-            <h2 class="heading to-animate">About Us</h2>
-            <p class="to-animate"><span class="firstcharacter">F</span>ar far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+            <h2 class="heading to-animate">Acerca de Fynance</h2>
+            <p class="to-animate"><span class="firstcharacter">N</span>uestra página web es una herramienta financiera diseñada para simplificar y mejorar la toma de decisiones relacionadas con CDTs y préstamos. Imagina que estás frente a un tablero de control donde puedes explorar, comparar y elegir la mejor opción para tus finanzas, todo de manera sencilla y con datos actualizados automáticamente</p>
         </div>
     </div>
     <!-- <h2 id="accion">val</h2> -->
