--- a/CDT.html
+++ b/CDT.html
@@ -95,7 +95,7 @@
             <div class="tabla">
                 <div class="fila">
                     <div class="celda" style="font-family: 'Playfair Display', serif;"><strong>Banco</strong></div>
-                    <div class="celda" style="font-family: 'Playfair Display', serif;"><strong>Ganancia aproximada</strong></div>
+                    <div class="celda" style="font-family: 'Playfair Display', serif;"><strong>Valor Final</strong></div>
                 </div>
                 <div class="fila">
                     <div class="celda" ><h4>PyBank</h4></div>
@@ -118,24 +118,24 @@
                     <div class="celda"><h4 id="resul_dav">--</h4></div>
                 </div>
                 <div class="fila">
-                    <div class="celda"><h4>Banco</h4></div>
-                    <div class="celda"><h4>--</h4></div>
+                    <div class="celda"><h4>Bancolombia</h4></div>
+                    <div class="celda"><h4 id="resul_colombia">--</h4></div>
                 </div>
                 <div class="fila">
-                    <div class="celda"><h4>Banco</h4></div>
-                    <div class="celda"><h4>--</h4></div>
+                    <div class="celda"><h4>Falabella</h4></div>
+                    <div class="celda"><h4 id="resul_fala">--</h4></div>
                 </div>
                 <div class="fila">
-                    <div class="celda"><h4>Banco</h4></div>
-                    <div class="celda"><h4>--</h4></div>
+                    <div class="celda"><h4>BBVA</h4></div>
+                    <div class="celda"><h4 id="resul_bbva">--</h4></div>
                 </div>
                 <div class="fila">
-                    <div class="celda"><h4>Banco</h4></div>
-                    <div class="celda"><h4>--</h4></div>
+                    <div class="celda"><h4>AV Villas</h4></div>
+                    <div class="celda"><h4 id="resul_av">--</h4></div>
                 </div>
                 <div class="fila">
-                    <div class="celda"><h4>Banco</h4></div>
-                    <div class="celda"><h4>--</h4></div>
+                    <div class="celda"><h4>Caja Social</h4></div>
+                    <div class="celda"><h4 id="resul_cs">--</h4></div>
                 </div>
             </div>
             <button onclick="CDT()">Calcular</button>
