--- a/CDT.html
+++ b/CDT.html
@@ -35,7 +35,7 @@
                     <a href="index.html">Fynance</a>
                 </div>
                 <div class="fh5co-menu-2">
-                    <a href="chat.html" data-nav-section="menu">Chat</a>
+                    <!-- <a href="chat.html" data-nav-section="menu">Chat</a> -->
                     <div class="dropdown">
                         <a href="#">Calculadora ▼</a>
                         <div class="dropdown-content">
@@ -83,7 +83,7 @@
             <label>Valor Inversión</label>
             <input type="number" id="vi" step="0.01">
     
-            <label>Número de años</label>
+            <label>Periodo</label>
             <select id="n">
                 <option value="0.25">90 días</option>
                 <option value="0.5">Medio año</option>
