--- a/PA.html
+++ b/PA.html
@@ -35,7 +35,7 @@
                     <a href="index.html">Fynance</a>
                 </div>
                 <div class="fh5co-menu-2">
-                    <a href="chat.html" data-nav-section="menu">Chat</a>
+                    <!-- <a href="chat.html" data-nav-section="menu">Chat</a> -->
                     <div class="dropdown">
                         <a href="#">Calculadora ▼</a>
                         <div class="dropdown-content">
